--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                     <!-- Logo -->
                     <div class="col-xl-2 col-lg-2 col-md-1">
                         <div class="logo">
-                            <a href="index.html"><h1 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">creativesix</h1></a>
+                            <a href="index.html"><h1 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">CREATIVESIX</h1></a>
                         </div>
                     </div>
                     <div class="col-xl-9 col-lg-10">
