--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <!-- Logo -->
                         <div class="col-xl-2 col-lg-2 col-md-1">
                             <div class="logo">
-                                <a href="index.html"><h1 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">creativesix</h1></a>
+                                <a href="index.html"><h1 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">CREATIVESIX</h1></a>
                             </div>
                         </div>
                         <div class="col-xl-9 col-lg-10">
@@ -76,7 +76,7 @@
                         <div class="row">
                             <div class="col-xl-9 col-lg-10">
                                 <div class="slide-content">
-                                    <h1 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Creativesix</h1>
+                                    <h1 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">CREATIVESIX</h1>
                                 </div>
                             </div>
                         </div>
